1. Committed the updated codes

--- a/app/src/main/res/layout/ar_image_post_layout.xml
+++ b/app/src/main/res/layout/ar_image_post_layout.xml
@@ -89,7 +89,7 @@
                 android:src="@drawable/breadcrumbs_trail" />
 
             <TextView
-                android:id="@+id/trailThree"
+                android:id="@+id/image_post_screen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
