--- a/app/src/main/res/layout/discover_details_screen.xml
+++ b/app/src/main/res/layout/discover_details_screen.xml
@@ -136,11 +136,10 @@
                                 android:layout_width="50dp"
                                 android:layout_height="60dp"
                                 android:layout_gravity="center"
-
                                 android:layout_marginTop="20dp"
                                 android:layout_marginEnd="10dp"
                                 android:layout_marginBottom="20dp"
-                                android:background="@drawable/details_screen_qr_scan" />
+                                android:src="@drawable/details_screen_qr_scan" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -270,7 +269,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
-
+                            android:id="@+id/challenge_image"
                             android:layout_width="0dip"
                             android:layout_height="40dp"
                             android:layout_weight="1"
