--- a/app/src/main/res/layout/friends_list_layout.xml
+++ b/app/src/main/res/layout/friends_list_layout.xml
@@ -57,16 +57,75 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/friends_list_screen_backButton" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/new_request_layout"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+
+        android:background="@drawable/friend_request_banner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_list_screen_title_border_line">
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/new_request_email_icon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="35dp"
+            android:background="@drawable/friend_request_banner_mail_icon"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/friendName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/claritycity_bold"
+            android:maxLines="2"
+            android:text="New Friend Requests!"
+            android:textColor="@color/white"
+            android:textSize="@dimen/disclaimer_content_text_size"
+            app:layout_constraintBottom_toBottomOf="@+id/new_request_email_icon"
+            app:layout_constraintEnd_toStartOf="@+id/number_of_friends_request"
+            app:layout_constraintStart_toEndOf="@+id/new_request_email_icon"
+            app:layout_constraintTop_toTopOf="@+id/new_request_email_icon" />
+
+
+        <TextView
+            android:id="@+id/number_of_friends_request"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/new_request_layout_circle_bg"
+            app:layout_constraintBottom_toBottomOf="@+id/friendName"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="35dp"
+            android:fontFamily="@font/claritycity_bold"
+            android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+            android:textColor="@color/white"
+            android:text="2"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="@+id/friendName" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/friends_list_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+       android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@layout/friend_list_adapter"
-        app:layout_constraintTop_toBottomOf="@+id/friends_list_screen_title_border_line" />
+        app:layout_constraintTop_toBottomOf="@+id/new_request_layout"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
