--- a/app/src/main/res/layout/leader_board_activity_layout.xml
+++ b/app/src/main/res/layout/leader_board_activity_layout.xml
@@ -15,7 +15,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/leaderboardScreenBackButton"
@@ -68,7 +69,6 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/circle"
             android:padding="4dp"
-            android:src="@drawable/breadcrumbs_trail"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,8 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="70dp"
             android:background="@drawable/leaderboard_spinner_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
 
             <androidx.appcompat.widget.AppCompatSpinner
@@ -92,7 +93,10 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/leaderBoard_trailIcon"
                 android:background="@drawable/spinner_bg"
-                android:dropDownVerticalOffset="45dp" />
+                android:spinnerMode="dropdown"
+                android:popupBackground="@drawable/leaderboard_spinner_pop_bg"
+                tools:listitem="@layout/leaderboard_spinner_item"
+                />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -110,7 +114,8 @@
         android:textSize="@dimen/discover_screen_poi_distance_text_size"
         app:layout_constraintEnd_toEndOf="@+id/leaderBoardTitle"
         app:layout_constraintStart_toStartOf="@+id/leaderBoardTitle"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/userInformationLayout"
@@ -121,139 +126,145 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/userProfilePicture"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="35dp"
-            android:src="@mipmap/breadcrumbs_app_icon_round"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/playerDetailsLayout"
+            android:id="@+id/payer_info_lay"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/userProfilePicture"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/leaderBoard_playerName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/claritycity_bold"
-                android:text="PlayerName"
-                android:textColor="#4B3B30"
-                android:textSize="@dimen/trail_list_item_size"
-                android:paddingBottom="2dp"
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/userProfilePicture"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="35dp"
+                android:src="@mipmap/breadcrumbs_app_icon_round"
+                app:civ_border_width="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/leaderBoard_player_level"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/dinish_regular"
-               android:paddingBottom="2dp"
-                android:text="Recruit Lv. 1"
-                android:textColor="#4B3B30"
-                android:textSize="@dimen/discover_screen_take_me_there_text_size"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/leaderBoard_playerName" />
-
-            <TextView
-                android:id="@+id/totalXP"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/dinish_bold"
-                android:text="2450 XP"
-                android:textColor="#4B3B30"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/leaderBoard_player_level" />
-
-            <ImageView
-                android:id="@+id/dot_one"
-                android:layout_width="4dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/trail_banner_dot"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/totalXP"
-                app:layout_constraintTop_toBottomOf="@+id/leaderBoard_player_level"
-                tools:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/total_duration"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/playerDetailsLayout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:fontFamily="@font/dinish_bold"
-                android:text="2D 4H"
-                android:textColor="#4B3B30"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/dot_one" />
+                app:layout_constraintStart_toEndOf="@+id/userProfilePicture"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/dot_two"
-                android:layout_width="4dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/trail_banner_dot"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/total_duration"
-                app:layout_constraintTop_toBottomOf="@+id/leaderBoard_player_level"
-                tools:ignore="ContentDescription" />
+                <TextView
+                    android:id="@+id/leaderBoard_playerName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/claritycity_bold"
+                    android:text="PlayerName"
+                    android:textColor="#4B3B30"
+                    android:textSize="@dimen/trail_list_item_size"
+                    android:paddingBottom="2dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/completed_POIs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/dinish_bold"
-                android:text="2/100 POIs"
-                android:textColor="#4B3B30"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/dot_two" />
+                <TextView
+                    android:id="@+id/leaderBoard_player_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dinish_regular"
+                    android:paddingBottom="2dp"
+                    android:text="Recruit Lv. 1"
+                    android:textColor="#4B3B30"
+                    android:textSize="@dimen/discover_screen_take_me_there_text_size"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/leaderBoard_playerName" />
+
+                <ImageView
+                    android:id="@+id/dot_level"
+                    android:layout_width="4dp"
+                    android:layout_height="4dp"
+                    android:layout_marginStart="5dp"
+                    android:background="@drawable/trail_banner_dot"
+                    android:textSize="@dimen/discover_screen_take_me_there_text_size"
+                    app:layout_constraintBottom_toTopOf="@+id/total_duration"
+                    app:layout_constraintStart_toEndOf="@+id/leaderBoard_player_level"
+                    app:layout_constraintTop_toBottomOf="@+id/leaderBoard_playerName"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/player_totalXP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dinish_regular"
+                    android:layout_marginStart="5dp"
+                    android:text="2450 XP"
+                    android:textColor="#4B3B30"
+                    android:textSize="@dimen/discover_screen_take_me_there_text_size"
+                    app:layout_constraintBottom_toTopOf="@+id/total_duration"
+                    app:layout_constraintStart_toEndOf="@+id/dot_level"
+                    app:layout_constraintTop_toBottomOf="@+id/leaderBoard_playerName" />
+
+                <TextView
+                    android:id="@+id/total_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/dinish_bold"
+                    android:text="2D 4H"
+                    android:textColor="#4B3B30"
+                    android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/dot_one"
+                    android:layout_width="4dp"
+                    android:layout_height="4dp"
+                    android:layout_marginStart="5dp"
+
+                    android:background="@drawable/trail_banner_dot"
+                    android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/total_duration"
+                    app:layout_constraintTop_toBottomOf="@+id/leaderBoard_player_level"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/completed_POIs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/dinish_bold"
+                    android:textColor="#4B3B30"
+                    android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+                    android:text="2/17 POIs"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/dot_one" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/share_lay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/playerDetailsLayout"
+            app:layout_constraintStart_toEndOf="@+id/payer_info_lay"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/leader_board_share_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/claritycity_bold"
-                android:text="#1423"
-                android:textColor="#B9AD8F"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -276,13 +287,13 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/top_ten_players_bg"
         android:fontFamily="@font/claritycity_bold"
-        android:paddingStart="20dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="20dp"
-        android:paddingBottom="5dp"
+        android:paddingStart="30dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="30dp"
+        android:paddingBottom="10dp"
         android:text="TOP TEN PLAYERS"
         android:textColor="#DF7103"
-        android:textSize="@dimen/discover_screen_poi_distance_text_size"
+        android:textSize="@dimen/challenge_begin_screen_subtitle_text_size"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
