--- a/app/src/main/res/layout/leaderboard_list_adapter.xml
+++ b/app/src/main/res/layout/leaderboard_list_adapter.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/userInformationLayout"
+        android:id="@+id/adapter_userInformationLayout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/trail_banner_undiscovered"
@@ -20,6 +20,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="35dp"
+            app:civ_border_width="0dp"
             android:src="@mipmap/breadcrumbs_app_icon_round"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/constraintLayout8"
             app:layout_constraintStart_toEndOf="@+id/leaderboard_adapter_userProfilePicture"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -43,6 +45,7 @@
                 android:textColor="#4B3B30"
                 android:textSize="@dimen/trail_list_item_size"
 
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,7 +56,8 @@
                 android:fontFamily="@font/dinish_regular"
                 android:text="Recruit Lv. 1"
                 android:textColor="#4B3B30"
-                android:textSize="@dimen/discover_screen_take_me_there_text_size"
+                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/leaderBoard_adapter_playerName" />
 
@@ -82,7 +86,7 @@
                 tools:ignore="ContentDescription" />
 
             <TextView
-                android:id="@+id/total_duration"
+                android:id="@+id/adapter_total_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -101,17 +105,17 @@
                 android:background="@drawable/trail_banner_dot"
                 android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/total_duration"
+                app:layout_constraintStart_toEndOf="@+id/adapter_total_duration"
                 app:layout_constraintTop_toBottomOf="@+id/leaderBoard_adapter_player_level"
                 tools:ignore="ContentDescription" />
 
             <TextView
-                android:id="@+id/completed_POIs"
+                android:id="@+id/adapter_completed_POIs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/dinish_bold"
-                android:text="2/100 POIs"
+                android:text="2/17 POIs"
                 android:textColor="#4B3B30"
                 android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -120,11 +124,12 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="30dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/leaderboard_adapter_playerDetailsLayout"
             app:layout_constraintTop_toTopOf="parent">
 
 
@@ -136,11 +141,10 @@
                 android:fontFamily="@font/claritycity_bold"
                 android:text="#1"
                 android:textColor="#B9AD8F"
-                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
+                android:textSize="@dimen/challenge_begin_screen_begin_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                  />
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
