--- a/app/src/main/res/layout/leaderboard_spinner_item.xml
+++ b/app/src/main/res/layout/leaderboard_spinner_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-
     >
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -12,10 +12,10 @@
         android:padding="10dp">
 
         <ImageView
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/img"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/breadcrumbs_trail" />
 
         <TextView
