--- a/app/src/main/res/layout/trail_tutorial_adapter_new.xml
+++ b/app/src/main/res/layout/trail_tutorial_adapter_new.xml
@@ -8,10 +8,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/trail_tut_blue_bg_new"
         android:paddingBottom="10dp"
-        app:layout_constraintHeight_default="wrap"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.95">
