--- a/app/src/main/res/layout/leaderboard_spinner_item.xml
+++ b/app/src/main/res/layout/leaderboard_spinner_item.xml
@@ -16,7 +16,7 @@
             android:id="@+id/img"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/breadcrumbs_trail" />
+            android:src="@drawable/wild_about_twlight_icon" />
 
         <TextView
             android:id="@+id/text"
@@ -27,6 +27,7 @@
             android:gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
+            android:textAllCaps="true"
             android:layout_gravity="center_vertical"
             android:fontFamily="@font/claritycity_bold"
             android:text="WILD ABOUT TWILIGHT TRAIL"
