--- a/app/src/main/res/layout/selfie_challenge_level_layout.xml
+++ b/app/src/main/res/layout/selfie_challenge_level_layout.xml
@@ -103,6 +103,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/selfie_challenge_level_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -153,7 +154,7 @@
                 <TextView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:background="@drawable/breadcrumbs_trail"
+                    android:background="@drawable/wild_about_twlight_icon"
                     android:gravity="center_horizontal" />
 
                 <TextView
@@ -162,7 +163,7 @@
                     android:layout_marginStart="3dp"
                     android:fontFamily="@font/claritycity_bold"
                     android:gravity="center_vertical"
-                    android:text="1/100"
+                    android:text="1/11"
                     android:textColor="#4B3B30"
                     android:textSize="14sp" />
             </androidx.appcompat.widget.LinearLayoutCompat>
