--- a/app/src/main/res/layout/trail_details_layout.xml
+++ b/app/src/main/res/layout/trail_details_layout.xml
@@ -122,7 +122,7 @@
                                 android:layout_gravity="center_horizontal"
                                 android:background="@drawable/circle"
                                 android:padding="12dp"
-                                android:src="@drawable/breadcrumbs_trail"
+                                android:src="@drawable/wild_about_twlight_icon"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +156,7 @@
                     android:paddingTop="5dp"
                     android:paddingEnd="15dp"
                     android:paddingBottom="5dp"
-                    android:text="USERNAME"
+                    android:text="WILD ABOUT TWILIGHT"
                     android:textColor="@color/white"
                     android:textSize="@dimen/discovery_screen_player_name_text_size" />
 
@@ -215,11 +215,12 @@
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:layout_gravity="left"
-                            android:background="@mipmap/ic_launcher_round"
-                            app:civ_border_width="5dp"
+
+
+                            app:civ_border_width="0dp"
                           />
                         <TextView
-                            android:id="@+id/creator_post"
+                            android:id="@+id/post_creator_name"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
